fixed tabbed nav overflow

--- a/stylesheets/layout/_navigation.scss
+++ b/stylesheets/layout/_navigation.scss
@@ -17,7 +17,7 @@ header nav {
 nav.tabbs {
     overflow: hidden;
     border-bottom: 1px solid gray;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     a {
         float: left;
         color: black;
